--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poc-pdf-viewer",
+  "name": "pdf-viewer",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "ng2-pdf-viewer": "^6.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
